--- a/vignettes/python-setup.Rmd
+++ b/vignettes/python-setup.Rmd
@@ -10,8 +10,10 @@ vignette: >
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>"
+  comment = "#>",
+  eval = FALSE
 )
+
 ```
 
 ## 1. Install the package
